Got rid of the use of deprecated and marked for removal code